minor config change

--- a/loveiswar/package.json
+++ b/loveiswar/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://waseem2803.github.io/loveiswar/",
+  "homepage": "https://waseem2803.github.io/liw_page/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
