--- a/loveiswar/package.json
+++ b/loveiswar/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "homepage": "https://waseem2803.github.io/liw_page/",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "npm run build && gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
