changes to basename and hosst

--- a/loveiswar/package.json
+++ b/loveiswar/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://loveiswar.in",
+  "homepage": "http://loveiswar.in",
   "scripts": {
     "deploy": "npm run build && gh-pages -d dist",
     "dev": "vite",
