--- a/loveiswar/package.json
+++ b/loveiswar/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "deploy": "npm run build && gh-pages -d dist",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp dist/index.html dist/404.html",
     "lint": "eslint .",
     "preview": "vite preview"
   },
